<resources>
    <string name="app_name">Milky Weigh</string>
    <string name="loading">Loading...</string>
    <string name="app_instructions">App Instructions</string>
    <string name="instructions_text">Enter your weight in kg. The app will convert your weight to various celestial bodies.</string>
    <string name="close">Close</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="milky_weigh">Milky Weigh </string>
    <string name="submit">Submit </string>
    <string name="weight">Weight...</string>
    <string name="enter_your_weight_input">Enter your weight (kg)</string>
    <string name="info">🪐</string>
    <string name="retry">Retry</string>
    <string name="planet">Planet</string>
    <string name="weight_label">Weight</string>
    <string name="description_label">Description</string>
</resources>